package Strategy_BigData;

import java.util.List;

public interface DataProcessing {
    List<CV> processCVs(List<CV> cvs);
}
